Adding two way connectors for sensible heat flx
* added import and export fields in the caps
* modified run sequence for two way coupling
* removed extra fd_fire.yaml in testx

--- a/tests/fd_fire.yaml
+++ b/tests/fd_fire.yaml
@@ -48,3 +48,6 @@
      - standard_name: inst_temp_height2m
        canonical_units: K
        description: atmosphere export - temperature height 2m
+     #
+     - standard_name: mean_sensi_heat_flx
+       canonical_units: W m-2
