--- a/tests/testx/testx.yaml
+++ b/tests/testx/testx.yaml
@@ -37,13 +37,15 @@ ATMD:
   output:
     write_final: true
   geom:
-    nx: 19
-    ny: 19
+    nx: 207
+    ny: 197
     nz: 44
-    minx: -103.591
-    miny:   39.6716
-    maxx: -103.568
-    maxy:   39.6893
+    minx: -109.370
+    miny:   36.279
+    maxx: -101.948
+    maxy:   41.619
+  importFields:
+    hflx_fire:                {dim: 2, min: -999999, max: 99999999999}
   exportFields:
     inst_zonal_wind_levels:   {dim: 3, val: 1}
     inst_merid_wind_levels:   {dim: 3, val: 3}
@@ -54,4 +56,3 @@ ATMD:
     inst_spec_humid_height2m: {dim: 2, val: 0.005}
     inst_pres_height_surface: {dim: 2, val: 85000}
     inst_temp_height2m:       {dim: 2, val: 310}
-    mean_sensi_heat_flx:      {dim: 2, val: 1}
