Update fire behavior nuopc
* renamed mean_prec to inst_prec
* initialized fire nuopc exports

--- a/tests/fd_fire.yaml
+++ b/tests/fd_fire.yaml
@@ -33,7 +33,8 @@
        canonical_units: mm
        description: atmosphere export
      #
-     - standard_name: mean_prec_rate
+     - standard_name: Faxa_rain
+       alias: inst_prec_rate
        canonical_units: kg m-2 s-1
        description: atmosphere export
      #
