Change name ignition line module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ list(APPEND _wrffire_physics physics/module_fr_fire_core.F
 			     physics/module_fr_fire_model.F
 			     physics/module_fr_fire_phys.F
 			     physics/module_fr_fire_fuel_moisture_model.F
-			     physics/ignition_line_mod.F
+			     physics/ignition_line_mod.F90
 			     physics/ros_wrffire_mod.F
 			     physics/fuel_anderson_mod.F90)
 
