Add nightly development test
* rename ci_test to release_test
* add badge to README

--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -1,6 +1,8 @@
-name: Fire Behavior CI Workflow
+name: Fire Behavior Release Test
 
 on:
+  release:
+    types: [ published ]
   pull_request:
     branches: [ main, develop ]
   workflow_dispatch:
