--- a/.github/workflows/develop_test.yml
+++ b/.github/workflows/develop_test.yml
@@ -21,6 +21,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04]
+    if: github.repository == 'NCAR/fire_behavior'
     runs-on: ${{matrix.os}}
 
     steps:
