--- a/tests/fd_fire.yaml
+++ b/tests/fd_fire.yaml
@@ -57,7 +57,7 @@
        canonical_units: kg kg-1 m s-1
      #
      - standard_name: smoke_fire
-       canonical_units: kg m-2
+       canonical_units: kg smoke kg-1 air
      #
      - standard_name: Sa_prsl
        alias: inst_pres_height_lowest_from_phys
