changed the precipitation variable

--- a/tests/fd_fire.yaml
+++ b/tests/fd_fire.yaml
@@ -34,7 +34,7 @@
        description: atmosphere export
      #
      - standard_name: Faxa_rain
-       alias: inst_prec_rate
+       alias: mean_prec_rate
        canonical_units: kg m-2 s-1
        description: atmosphere export
      #
