One-way coupling to WRF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ list(APPEND _share_files share/proj_lc_mod.F90
 			 share/fuel_mod.F90
 			 share/ros_mod.F90
 			 share/fmc_mod.F90
+			 share/interp_mod.F90
                          share/constants_mod.F90)
 
 # IO
